force-app/main/default/objects/Care_Journey__c/Care_Journey__c.object-meta.xml
<CustomObject>
<description>Tracks a patient care cycle and orchestration state.</description>
<label>Care Journey</label>
<nameField>
<displayFormat>CJ-{000000}</displayFormat>
<label>Care Journey Name</label>
<type>AutoNumber</type>
</nameField>
<pluralLabel>Care Journeys</pluralLabel>
<sharingModel>Private</sharingModel>
</CustomObject>