force-app/main/default/objects/Care_Journey__c/fields/Attempts__c.field-meta.xml
<CustomField>
    <fullName>Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>