force-app/main/default/objects/Care_Journey__c/fields/Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Coordinator__c</fullName>
    <label>Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Coordinator Records</relationshipLabel>
    <relationshipName>Coordinator</relationshipName>
    <type>Lookup</type>
</CustomField>