force-app/main/default/objects/Care_Journey__c/fields/Cycle__c.field-meta.xml
<CustomField>
    <fullName>Cycle__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cycle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>