force-app/main/default/objects/Care_Journey__c/fields/Journey_Type__c.field-meta.xml
<CustomField>
    <fullName>Journey_Type__c</fullName>
    <label>Journey Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Diabetes follow-up loop</fullName>
            </value>
            <value>
                <fullName>Diabetes program</fullName>
            </value>
            <value>
                <fullName>Specialty consult</fullName>
            </value>
            <value>
                <fullName>Hypertension</fullName>
            </value>
            <value>
                <fullName>Prediabetes</fullName>
            </value>
            <value>
                <fullName>Post-discharge</fullName>
            </value>
        </valueSetDefinition>
        <restricted>true</restricted>
    </valueSet>
    <required>true</required>
</CustomField>