force-app/main/default/objects/Care_Journey__c/fields/Last_Consult_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Consult_Date__c</fullName>
    <label>Last Consult Date</label>
    <type>Date</type>
</CustomField>