force-app/main/default/objects/Care_Journey__c/fields/Last_Outreach_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Outreach_At__c</fullName>
    <label>Last Outreach At</label>
    <type>DateTime</type>
</CustomField>