force-app/main/default/objects/Care_Journey__c/fields/LTFU_Reason__c.field-meta.xml
<CustomField>
    <fullName>LTFU_Reason__c</fullName>
    <label>Lost-to-follow-up Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Moved</fullName>
            </value>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Feels fine</fullName>
            </value>
            <value>
                <fullName>Seeing another doctor</fullName>
            </value>
            <value>
                <fullName>Unreachable</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>