force-app/main/default/objects/Care_Journey__c/fields/Max_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Max_Attempts__c</fullName>
    <label>Max</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>