force-app/main/default/objects/Care_Journey__c/fields/Next_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Next_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Appointment</label>
    <referenceTo>Appointment__c</referenceTo>
    <relationshipLabel>Next Appointment Records</relationshipLabel>
    <relationshipName>Next_Appointment</relationshipName>
    <type>Lookup</type>
</CustomField>