force-app/main/default/objects/Care_Journey__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Care plan active</fullName>
                <default>true</default>
                <label>Care plan active</label>
            </value>
            <value>
                <fullName>Due</fullName>
            </value>
            <value>
                <fullName>Outreach sent</fullName>
            </value>
            <value>
                <fullName>Snoozed</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Check-in done</fullName>
            </value>
            <value>
                <fullName>Pre-consult ready</fullName>
            </value>
            <value>
                <fullName>Consulted</fullName>
            </value>
            <value>
                <fullName>Lost to follow-up</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>