force-app/main/default/objects/Care_Journey__c/fields/State_Changed_At__c.field-meta.xml
<CustomField>
    <fullName>State_Changed_At__c</fullName>
    <label>State Changed At</label>
    <type>DateTime</type>
</CustomField>