force-app/main/default/objects/Care_Journey__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Care plan active</fullName>
                <default>true</default>
                <label>Care plan active</label>
            </value>
            <value>
                <fullName>Due</fullName>
            </value>
            <value>
                <fullName>Outreach sent</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Snoozed</fullName>
            </value>
            <value>
                <fullName>Lost to follow-up</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>