force-app/main/default/objects/Care_Journey__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <label>Template</label>
    <referenceTo>Journey_Template__c</referenceTo>
    <relationshipLabel>Template Records</relationshipLabel>
    <relationshipName>Template</relationshipName>
    <type>Lookup</type>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>