force-app/main/default/objects/Care_Journey__c/CJ_Close_Needs_Reason.validationRule-meta.xml
<ValidationRule>
<fullName>CJ_Close_Needs_Reason</fullName>
<active>true</active>
<errorConditionFormula>ISPICKVAL(Status__c,'Completed') &amp;&amp; ISBLANK(TEXT(Closed_Reason__c))</errorConditionFormula>
<errorMessage>Choose a closed reason.</errorMessage>
</ValidationRule>