force-app/main/default/objects/Care_Journey__c/CJ_Snooze_Needs_Date.validationRule-meta.xml
<ValidationRule>
<fullName>CJ_Snooze_Needs_Date</fullName>
<active>true</active>
<errorConditionFormula>ISPICKVAL(Status__c,'Snoozed') &amp;&amp; ISBLANK(Snooze_Until__c)</errorConditionFormula>
<errorMessage>Snoozed journeys need a Snooze Until date.</errorMessage>
</ValidationRule>